# AirBNB-clone

./: .gitignore  Pipfile  README.md  manage.py  pyproject.toml  requirements.txt
AirtBnB/: asgi.py  settings.py  urls.py  wsgi.py
config/: settings.py  urls.py
conversations/: admin.py  apps.py  models.py
conversations/migrations/: 0001_initial.py  0002_alter_conversation_options_alter_message_options.py  0003_alter_message_conversation.py
core/: models.py  urls.py
lists/: admin.py  apps.py  models.py
lists/migrations/: 0001_initial.py  0002_alter_list_options.py
reservations/: admin.py  apps.py  models.py
reservations/migrations/: 0001_initial.py  0002_alter_reservation_options_alter_reservation_status.py
reviews/: admin.py  apps.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_check_in_alter_review_cleanliness_and_more.py  0003_alter_review_room.py
rooms/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_alter_room_created_alter_room_updated.py  0003_roomtype_alter_room_options_alter_room_host_and_more.py  0004_roomamenity_roomfacility_roomrule_and_more.py  0005_roomphoto_room_room_photo.py  0006_remove_room_room_photo.py  0007_roomimage_delete_roomphoto.py  0008_alter_roomimage_image.py  0009_alter_roomimage_options.py  0010_remove_room_room_facility_room_room_facility.py  0011_alter_room_room_facility.py  0012_rename_desciption_room_description.py  0013_room_bath.py  0014_rename_room_rule_room_house_rule.py  0015_alter_room_host_alter_room_room_amenity.py  0016_alter_room_house_rule_alter_room_room_amenity_and_more.py  0017_alter_roomimage_room.py  0018_rename_roomamenity_amenity_and_more.py  0019_alter_amenity_options_alter_facility_options_and_more.py
static/room/: styles.css
templates/: 404.html  base.html
users/: admin.py  forms.py  models.py  urls.py  views.py
(+30 files in other folders)
