[tool.poetry]
name = "airbnb-clone"
version = "0.1.0"
description = ""
authors = ["ahMAD ASSadi <ds1380ahmad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = {version = "3.8.1", markers = "python_version >= \"3.8\""}
certifi = {version = "2024.8.30", markers = "python_version >= \"3.6\""}
charset-normalizer = {version = "3.4.0", markers = "python_full_version >= \"3.7.0\""}
crispy-bootstrap5 = {version = "2024.10", markers = "python_version >= \"3.8\""}
django = {version = "5.1.2", markers = "python_version >= \"3.10\""}
django-countries = "7.6.1"
django-crispy-forms = {version = "2.3", markers = "python_version >= \"3.8\""}
django-environ = {version = "0.11.2", markers = "python_version >= \"3.6\" and python_version < \"4\""}
faker = {version = "30.8.2", markers = "python_version >= \"3.8\""}
idna = {version = "3.10", markers = "python_version >= \"3.6\""}
ippanel = "2.0.7"
pillow = {version = "11.0.0", markers = "python_version >= \"3.9\""}
psycopg2 = {version = "2.9.10", markers = "python_version >= \"3.8\""}
python-dateutil = {version = "2.9.0.post0", markers = "python_version >= \"2.7\" and python_version not in \"3.0, 3.1, 3.2, 3.3\""}
requests = {version = "2.32.3", markers = "python_version >= \"3.8\""}
six = {version = "1.16.0", markers = "python_version >= \"2.7\" and python_version not in \"3.0, 3.1, 3.2, 3.3\""}
sqlparse = {version = "0.5.1", markers = "python_version >= \"3.8\""}
toposort = "1.10"
typing-extensions = {version = "4.12.2", markers = "python_version >= \"3.8\""}
urllib3 = {version = "2.2.3", markers = "python_version >= \"3.8\""}
whitenoise = {version = "6.8.2", markers = "python_version >= \"3.9\""}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
